2008-03-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/linkcmds: Add wildcard to gcc_except_table section so
	programs compiled with gcc 4.3.x can link.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h, startup/bspstart.c, startup/bspstart.c.nocache:
	Eliminate copies of the Configuration Table. Use the RTEMS provided
	accessor macros to obtain configuration fields.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c, startup/bspstart.c.nocache: Move
	interrupt_stack_size field from CPU Table to Configuration Table.
	Eliminate CPU Table from all ports. Delete references to CPU Table in
	all forms.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Add bsppredriverhook.c.
	* irq/irq.h: Attempt to correct definition of
	BSP_CPM_IRQ_LOWEST_OFFSET.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c, startup/bspstart.c.nocache: Moved most of the
	remaining CPU Table fields to the Configuration Table. This included
	pretasking_hook, predriver_hook, postdriver_hook, idle_task,
	do_zero_of_workspace, extra_mpci_receive_server_stack,
	stack_allocate_hook, and stack_free_hook. As a side-effect of this
	effort some multiprocessing code was made conditional and some style
	clean up occurred.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq.h, irq/irq_init.c: Removed the definition
	of ASM_IRQ_VECTOR_BASE; this symbol was only use to
	initialize the irqBase member of the rtems_irq_global_settings
	struct. However, irqBase is an rtems_irq_symbolic_name,
	so using BSP_LOWEST_OFFSET is more appropriate.

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c, startup/bspstart.c.nocache: Eliminate PowerPC
	specific elements from the CPU Table. They have been replaced with
	variables named bsp_XXX as needed.

2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* irq/irq.c: Code outside of cpukit should use the public API for